frontend/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-frontend-deployment
  labels:
    app: main-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-frontend
  template:
    metadata:
      labels:
        app: main-frontend
    spec:
      containers:
        - name: main-frontend
          image: 614374457256.dkr.ecr.us-east-1.amazonaws.com/python-flask-frontend:6
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 150m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: main-service
  labels:
    app: main-frontend
spec:
  type: ClusterIP
  selector:
    app: main-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
